2007-12-13  Alexander Larsson  <alexl@redhat.com>

        * gmountoperation.h:
	G_PASSWORD_FLAGS_ANON_SUPPORTED -> G_PASSWORD_FLAGS_ANONYMOUS_SUPPORTED

2007-12-12  Alexander Larsson  <alexl@redhat.com>

        * gioscheduler.c:
	Fix race condition when freeing proxy in
	g_io_job_send_to_mainloop().

2007-12-12  Alexander Larsson  <alexl@redhat.com>

        * gfileattribute.c:
        * gfileinfo.[ch]:
        * glocalfile.c:
        * glocalfileinfo.c:
	Make attribute namespace separator "::" instead of ":".
	Use - instead of _ as separator in attribute names.

2007-12-12  Alexander Larsson  <alexl@redhat.com>

        * gbufferedinputstream.h:
        * gbufferedoutputstream.h:
        * gdatainputstream.h:
        * gdataoutputstream.h:
        * gdirectorymonitor.h:
        * gfileenumerator.h:
        * gfileinputstream.h:
        * gfilemonitor.h:
        * gfileoutputstream.h:
        * gfilterinputstream.h:
        * gfilteroutputstream.h:
        * ginputstream.h:
        * glocalfileinputstream.h:
        * glocalfileoutputstream.h:
        * gmemoryinputstream.h:
        * gmemoryoutputstream.h:
        * gnativevolumemonitor.h:
        * goutputstream.h:
        * gunixinputstream.h:
        * gunixoutputstream.h:
        * gvfs.h:
        * gvolumemonitor.h:
	s/parent/parent_instance/ in GObjects

2007-12-12  Alexander Larsson  <alexl@redhat.com>

        * gdrive.h:
        * gmount.h:
        * gvolume.h:
	No need for padding for interfaces
	
2007-12-12  Alexander Larsson  <alexl@redhat.com>

        * gappinfo.[ch]:
        * gasyncresult.c:
        * gbufferedinputstream.c:
        * gbufferedoutputstream.c:
        * gcancellable.c:
        * gcontenttype.c:
        * gdatainputstream.[ch]:
        * gdesktopappinfo.c:
        * gdirectorymonitor.c:
        * gfile.[ch]:
        * gfileattribute.[ch]:
        * gfileicon.[ch]:
        * gfileinfo.h:
        * gfileinputstream.h:
        * gfilemonitor.[ch]:
        * gfileoutputstream.[ch]: