@@ -299,8 +299,8 @@ g_file_set_attribute_uint32
 g_file_set_attribute_int32
 g_file_set_attribute_uint64
 g_file_set_attribute_int64
-g_mount_for_location
-g_mount_for_location_finish
+g_file_mount_enclosing_volume
+g_file_mount_enclosing_volume_finish
 g_file_mount_mountable
 g_file_mount_mountable_finish
 g_file_unmount_mountable
